--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
         <span class="box6"></span>
       </section>
 
-
+      <section>
+        <span class="box7"></span>
+        <span class="box8"></span>
+        <span class="box9"></span>
+      </section>
+    </div>
+  </div>
 
   <div class="result-box">
     <div class="won-text"></div>
