--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="content">
       <div class="title">Select which you want to be?</div>
       <div class="options">
-        <button class="playerX">Player (A)</button>
-        <button class="playerO">Player (B)</button>
+        <button class="playerX">Player (X)</button>
+        <button class="playerO">Player (O)</button>
       </div>
       <div class="credit">Created By <a href="https://github.com/Pallavi-Shtgr" target="_blank">PALLAVI </a></div>
     </div>
@@ -23,8 +23,8 @@
   <div class="play-board">
     <div class="details">
       <div class="players">
-        <span class="Xturn">A's Turn</span>
-        <span class="Oturn">B's Turn</span>
+        <span class="Xturn">X's Turn</span>
+        <span class="Oturn">O's Turn</span>
         <div class="slider"></div>
       </div>
     </div>
